--- a/auth/k8s/auth-depl.yml
+++ b/auth/k8s/auth-depl.yml
@@ -2,18 +2,20 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: auth-depl
+  labels:
+    app: auth-depl-label
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: auth
+      app: auth-pod-label
   template:
     metadata:
       labels:
-        app: auth
+        app: auth-pod-label
     spec:
       containers:
-      - name: auth
+      - name: auth-pod
         image: bogdan-pechounov/auth
         ports:
         - containerPort: 3000
@@ -22,11 +24,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: auth-srv
-  labels:
-    app: auth
 spec:
   selector:
-    app: auth
+    app: auth-depl-label
   type: LoadBalancer
   ports:
   - protocol: TCP
