--- a/auth/k8s/auth-depl.yml
+++ b/auth/k8s/auth-depl.yml
@@ -2,8 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: auth-depl
-  labels:
-    app: auth-depl-label
+  # labels:
+  #   app: auth-depl-label
 spec:
   replicas: 1
   selector:
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: auth-pod
-        image: bogdan-pechounov/auth
+        image: auth-img
         ports:
         - containerPort: 3000
 ---
