--- a/ingress-srv.yml
+++ b/ingress-srv.yml
@@ -7,7 +7,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: notes-app.com
+    - # host: quiz-app.com
       http:
         paths:
           - path: /api/users/?(.*)
