--- a/ingress-srv.yml
+++ b/ingress-srv.yml
@@ -3,14 +3,15 @@ kind: Ingress
 metadata:
   name: ingress-service
   annotations:
-    # kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/rewrite-target: / # rewrite /api/users/signup to simply /signup
     nginx.ingress.kubernetes.io/use-regex: 'true'
 spec:
   ingressClassName: nginx
   rules:
-    - # host: quiz-app.com
+    - host: quiz-app.com
       http:
         paths:
+          # auth service
           - path: /api/users/?(.*)
             pathType: Prefix
             backend:
@@ -18,6 +19,7 @@ spec:
                 name: auth-srv
                 port:
                   number: 3000
+          # default to react client
           - path: /?(.*)
             pathType: Prefix
             backend:
