--- a/ingress-srv.yml
+++ b/ingress-srv.yml
@@ -3,8 +3,8 @@ kind: Ingress
 metadata:
   name: ingress-service
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: / # rewrite /api/users/signup to simply /signup
     nginx.ingress.kubernetes.io/use-regex: 'true'
+    nginx.ingress.kubernetes.io/rewrite-target: /$2 # rewrite /api/users/signup to simply /signup
 spec:
   ingressClassName: nginx
   rules:
@@ -12,7 +12,7 @@ spec:
       http:
         paths:
           # auth service
-          - path: /api/users/?(.*)
+          - path: /api/users(/|$)(.*)
             pathType: Prefix
             backend:
               service:
@@ -20,10 +20,10 @@ spec:
                 port:
                   number: 3000
           # default to react client
-          - path: /?(.*)
-            pathType: Prefix
-            backend:
-              service:
-                name: auth-srv
-                port:
-                  number: 3000
+          # - path: /?(.*)
+          #   pathType: Prefix
+          #   backend:
+          #     service:
+          #       name: auth-srv
+          #       port:
+          #         number: 3000
