--- a/auth/k8s/auth-mongo-depl.yml
+++ b/auth/k8s/auth-mongo-depl.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mongo-pvc
+  name: auth-mongo-pvc
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 50Mi
@@ -12,7 +12,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mongo-depl
+  name: auth-mongo-depl
 spec:
   selector:
     matchLabels:
@@ -33,7 +33,7 @@ spec:
       volumes:
         - name: storage
           persistentVolumeClaim:
-            claimName: mongo-pvc
+            claimName: auth-mongo-pvc
 ---
 apiVersion: v1
 kind: Service
