--- a/ingress-srv.yml
+++ b/ingress-srv.yml
@@ -4,7 +4,7 @@ metadata:
   name: ingress-service
   annotations:
     nginx.ingress.kubernetes.io/use-regex: 'true'
-    nginx.ingress.kubernetes.io/rewrite-target: /$2 # rewrite /api/users/signup to simply /signup
+    # nginx.ingress.kubernetes.io/rewrite-target: /$2 # rewrite /api/users/signup to simply /signup
 spec:
   ingressClassName: nginx
   rules:
@@ -20,10 +20,10 @@ spec:
                 port:
                   number: 3000
           # default to react client
-          # - path: /?(.*)
-          #   pathType: Prefix
-          #   backend:
-          #     service:
-          #       name: auth-srv
-          #       port:
-          #         number: 3000
+          - path: /client
+            pathType: Prefix
+            backend:
+              service:
+                name: react-client-srv
+                port:
+                  number: 5173
