--- a/ingress-srv.yml
+++ b/ingress-srv.yml
@@ -20,7 +20,7 @@ spec:
                 port:
                   number: 3000
           # default to react client
-          - path: /client
+          - path: /.*
             pathType: Prefix
             backend:
               service:
