--- a/auth/k8s/auth-mongo-set.yml
+++ b/auth/k8s/auth-mongo-set.yml
@@ -17,6 +17,7 @@ spec:
   selector:
     matchLabels:
       app: auth-mongo-pod-label
+  serviceName: auth-mongo-srv
   template:
     metadata:
       labels:
