--- a/ingress-srv.yml
+++ b/ingress-srv.yml
@@ -12,7 +12,7 @@ spec:
       http:
         paths:
           # auth service
-          - path: /api/users(/|$)(.*)
+          - path: /api/auth(/|$)(.*)
             pathType: Prefix
             backend:
               service:
