hashing password, jwt tokens

--- a/auth/k8s/auth-depl.yml
+++ b/auth/k8s/auth-depl.yml
@@ -22,6 +22,11 @@ spec:
         env:
           - name: MONGO_URI
             value: mongodb://auth-mongo-srv:27017/auth
+          - name: JWT_SECRET
+            valueFrom:
+              secretKeyRef:
+                name: jwt-secret
+                key: JWT_SECRET
 ---
 apiVersion: v1
 kind: Service
