--- a/auth/package.json
+++ b/auth/package.json
@@ -7,18 +7,21 @@
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "test": "jest",
-    "test-watch": "jest --watchAll"
+    "test-watch": "jest --watchAll",
+    "coverage": "jest --coverage"
   },
   "jest": {
     "setupFilesAfterEnv": [
       "./tests/utils/setup.js"
-    ]
+    ],
+    "testTimeout": 10000
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "express-validator": "^6.15.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.1"
