--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -1,14 +1,12 @@
 FROM node:18-alpine
-# ENV NODE_ENV=production
+ENV NODE_ENV=production
 
 WORKDIR /app
 
 COPY ["package.json", "package-lock.json*", "./"]
 
-# RUN npm install --production
-RUN npm install
+RUN npm install --production
 
 COPY . .
 
-# CMD ["npm", "start"]
-CMD [ "npm", "run", "dev" ]
+CMD ["npm", "start"]
