--- a/react-client/Dockerfile.dev
+++ b/react-client/Dockerfile.dev
@@ -1,7 +1,9 @@
 FROM node:18-alpine
 WORKDIR /app
 COPY ["package.json", "package-lock.json*", "./"]
+# use cached production image
 RUN npm i --production
 COPY . .
-EXPOSE 5173
+# install dev dependencies
+RUN npm i
 CMD ["npm", "run", "dev"]
