use $IMAGE instead of %IMAGE%

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -28,7 +28,7 @@ test:
     context: auth
     custom:
       # run test in container
-      - command: docker run -e CI=true %IMAGE% npm test
+      - command: echo $IMAGE && docker run -e CI=true $IMAGE npm test
 manifests:
   rawYaml:
   - auth/k8s/*.yaml
