--- a/react-client/Dockerfile
+++ b/react-client/Dockerfile
@@ -1,7 +1,12 @@
 FROM node:18-alpine
 WORKDIR /app
 COPY ["package.json", "package-lock.json*", "./"]
-RUN npm i --production
+RUN npm i
 COPY . .
-EXPOSE 5173
-CMD ["npm", "run", "dev"]
+RUN npm run build
+
+FROM node:18-alpine
+WORKDIR /app
+RUN npm install --global serve
+COPY dist .
+CMD ["serve", "-l", "5173"]
