--- a/react-client/package.json
+++ b/react-client/package.json
@@ -19,9 +19,7 @@
     "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "vite": "^4.2.0",
-    "@vitejs/plugin-react": "^3.1.0"
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -29,9 +27,11 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^3.1.0",
     "jsdom": "^21.1.1",
     "msw": "^1.1.0",
     "typescript": "^4.9.3",
+    "vite": "^4.2.0",
     "vitest": "^0.29.3"
   }
 }
