--- a/react-client/package.json
+++ b/react-client/package.json
@@ -19,7 +19,8 @@
     "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -27,6 +28,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/redux-logger": "^3.0.9",
     "@vitejs/plugin-react": "^3.1.0",
     "jsdom": "^21.1.1",
     "msw": "^1.1.0",
