--- a/react-client/Dockerfile
+++ b/react-client/Dockerfile
@@ -1,18 +1,12 @@
-# FROM node:18-alpine
-# WORKDIR /app
-# COPY ["package.json", "package-lock.json*", "./"]
-# RUN npm i
-# COPY . .
-# RUN npm run build
-
-# FROM node:18-alpine
-# WORKDIR /app
-# RUN npm install --global serve
-# COPY ./dist .
-# CMD ["serve", "-l", "5173"]
-FROM node:18-alpine
+FROM node:18-alpine as builder 
 WORKDIR /app
 COPY ["package.json", "package-lock.json*", "./"]
 RUN npm i
 COPY . .
-CMD ["npm", "run", "dev"]
+RUN npm run build
+
+FROM node:18-alpine
+WORKDIR /app
+RUN npm install --global serve
+COPY --from=builder /app/dist .
+CMD ["serve", "-l", "5173"]
