--- a/skaffold.dev.yaml
+++ b/skaffold.dev.yaml
@@ -14,6 +14,11 @@ build:
         manual:
           - src: src/**/*
             dest: .
+    # quiz
+    - image: quiz-img
+      context: quiz
+      docker:
+        dockerfile: Dockerfile.dev
     # react-client
     - image: react-client-img
       context: react-client
@@ -25,8 +30,9 @@ build:
             dest: .
 manifests:
   rawYaml:
-  - auth/k8s/*.yaml
-  - react-client/k8s/*.yaml
+  # - auth/k8s/*.yaml
+  - quiz/k8s/*.yaml
+  # - react-client/k8s/*.yaml
   - jwt-secret.yaml
   - ingress-srv.yaml
 
