--- a/quiz/Dockerfile.dev
+++ b/quiz/Dockerfile.dev
@@ -1,11 +1,11 @@
 FROM golang:1.16-buster AS build
 
-WORKDIR /app
+WORKDIR /quiz
 
 COPY go.mod ./
 COPY go.sum ./
 RUN go mod download
 
-COPY *.go ./
+COPY . .
 
-CMD ["go", "run", "."]
+CMD ["go", "run", "main.go"]
