--- a/skaffold.dev.yaml
+++ b/skaffold.dev.yaml
@@ -3,22 +3,22 @@ apiVersion: skaffold/v4beta2
 kind: Config
 metadata:
   name: microservices-quiz-app
-# build:
-#   artifacts:
-#     # auth
-#     - image: auth-img
-#       context: auth
-#       docker:
-#         dockerfile: Dockerfile.dev
-#       sync:
-#         manual:
-#           - src: src/**/*
-#             dest: .
-#     # quiz
-#     - image: quiz-img
-#       context: quiz
-#       docker:
-#         dockerfile: Dockerfile.dev
+build:
+  artifacts:
+    # auth
+    - image: auth-img
+      context: auth
+      docker:
+        dockerfile: Dockerfile.dev
+      sync:
+        manual:
+          - src: src/**/*
+            dest: .
+    # quiz
+    - image: quiz-img
+      context: quiz
+      docker:
+        dockerfile: Dockerfile.dev
 #     # react-client
 #     - image: react-client-img
 #       context: react-client
@@ -30,10 +30,10 @@ metadata:
 #             dest: .
 manifests:
   rawYaml:
-  # # - auth/k8s/*.yaml
+  - auth/k8s/*.yaml
   # - quiz/k8s/*.yaml
-  # # - react-client/k8s/*.yaml
-  # - jwt-secret.yaml
+  # - react-client/k8s/*.yaml
+  - jwt-secret.yaml
   # - ingress-srv.yaml
   - kafka.yaml
 
