--- a/auth/package.json
+++ b/auth/package.json
@@ -25,6 +25,7 @@
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.15.0",
     "jsonwebtoken": "^9.0.0",
+    "kafkajs": "^2.2.4",
     "mongoose": "^7.0.1"
   },
   "devDependencies": {
