--- a/quiz/Dockerfile
+++ b/quiz/Dockerfile
@@ -1,20 +1,18 @@
 ## Build
 FROM golang:1.20-buster AS build
 
-WORKDIR /quiz
+WORKDIR /app
 
 COPY go.mod ./
 COPY go.sum ./
 RUN go mod download
 
-COPY *.go ./
+COPY . .
 
 RUN go build -o /quiz
 
 ## Deploy
 FROM gcr.io/distroless/base-debian10
-
-# WORKDIR /quiz
 
 COPY --from=build /quiz /quiz
 
