--- a/kafka.yaml
+++ b/kafka.yaml
@@ -15,11 +15,11 @@ metadata:
   name: zookeeper-service
   namespace: kafka
 spec:
-  type: NodePort
+  # type: NodePort
   ports:
     - name: zookeeper-port
       port: 2181
-      nodePort: 30181
+      # nodePort: 30181
       targetPort: 2181
   selector:
     app: zookeeper
@@ -57,11 +57,11 @@ metadata:
   name: kafka-broker
   namespace: kafka
 spec:
+  # headless service
   clusterIP: "None"
-  # ports:
-  # - protocol: TCP
-  #   port: 9092
-  #   targetPort: 9092
+  ports:
+  - name: foo
+    port: 9092
   selector:
     app: kafka-broker
 ---
@@ -88,7 +88,6 @@ spec:
         - name: KAFKA_BROKER_ID
           value: "1"
         - name: KAFKA_ZOOKEEPER_CONNECT
-          # value: 10.244.0.35:2181
           value: zookeeper-service:2181
         - name: KAFKA_LISTENERS
           value: PLAINTEXT://:9092
