kafka test-topic

--- a/kafka.yaml
+++ b/kafka.yaml
@@ -52,8 +52,8 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    app: kafka-broker
+  # labels:
+  #   app: kafka-broker
   name: kafka-broker
   namespace: kafka
 spec:
@@ -93,6 +93,13 @@ spec:
           value: PLAINTEXT://:9092
         - name: KAFKA_ADVERTISED_LISTENERS
           value: PLAINTEXT://kafka-broker:9092
+          # automatically create topics
+        - name: KAFKA_CREATE_TOPICS
+          value: 'test-topic:1:1'
+        - name: KAFKA_AUTO_CREATE_TOPICS_ENABLE
+          value: 'true'
+        - name: KAFKA_DELETE_TOPIC_ENABLE
+          value: 'true'
         image: wurstmeister/kafka
         imagePullPolicy: IfNotPresent
         name: kafka-broker
