--- a/kafka.yaml
+++ b/kafka.yaml
@@ -72,6 +72,7 @@ metadata:
     app: kafka-broker
   name: kafka-broker
   namespace: kafka
+serviceName: kafka-broker
 spec:
   # replicas: 1
   selector:
