dockerize spring boot

--- a/scores/src/main/resources/application.properties
+++ b/scores/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-server.port=5000
+server.port=3000
 
-spring.kafka.bootstrap-servers=localhost:29092
+spring.kafka.bootstrap-servers=kafka-broker.kafka.svc.cluster.local:9092
